# tchunt-rs

./: .gitignore  Cargo.toml  README.md
src/: entropy.rs  lib.rs  main.rs
test-resources/: random512  random65536
