[package]
name = "tchunt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-walkdir = "1.0.0"
entropy = "0.4.2"
futures = "0.3.30"
futures-lite = "2.3.0"
futures-util = "0.3.30"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
